force-app/main/default/objects/IM_Country__c/IM_Country__c.object-meta.xml
<CustomObject>
    <description>custom object used to store the country name, ISO country code for reference in fields, validation rules, apex classes and triggers</description>
    <label>IM Country</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IM Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>