force-app/main/default/objects/IM_Country__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>ISO Code should be required</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>