force-app/main/default/objects/IM_Country__c/fields/AlternativeNames__c.field-meta.xml
<CustomField>
    <fullName>AlternativeNames__c</fullName>
    <label>Alternative Names</label>
    <type>TextArea</type>
</CustomField>