force-app/main/default/objects/IM_Country__c/fields/CountryName_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>CountryName_Ext_ID__c</fullName>
    <description>External ID field for DM optimized process</description>
    <externalId>true</externalId>
    <label>CountryName Ext ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>