force-app/main/default/objects/IM_Country__c/fields/Iso31662Code__c.field-meta.xml
<CustomField>
    <fullName>Iso31662Code__c</fullName>
    <description>2 Digit ISO country Code</description>
    <label>ISO 3166-2 Code</label>
    <type>TextArea</type>
</CustomField>