force-app/main/default/objects/IM_Country__c/fields/Iso31663Code__c.field-meta.xml
<CustomField>
    <fullName>Iso31663Code__c</fullName>
    <description>3 Digit ISO Country Code</description>
    <label>ISO 3166-3 Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>