force-app/main/default/objects/IM_Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Region__c</columns>
    <columns>Iso31662Code__c</columns>
    <columns>Iso31663Code__c</columns>
    <columns>Cluster__c</columns>
    <columns>Sub_Cluster__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>