force-app/main/default/objects/IM_Country__c/listViews/Asia_Pacific_Division_Countries.listView-meta.xml
<ListView>
    <fullName>Asia_Pacific_Division_Countries</fullName>
    <columns>NAME</columns>
    <columns>Iso31663Code__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Asia Pacific</value>
    </filters>
    <label>Asia Pacific Division Countries</label>
    <language>en_US</language>
    <sharedTo>
        <role>IRONMTNADMIN</role>
    </sharedTo>
</ListView>