force-app/main/default/objects/IM_Country__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All IRM Countries</label>
</ListView>